
  07 Dec 2004; Roy Marples <uberlord@gentoo.org>:

    essidnet - fixed setting up search domains
    ifconfig now reads the old gateway variable correctly - fixes #73607
    iwconfig now supports backgrounding
    ifconfig and iproute2 now support function interface_set_mac_address
    macchanger no longer depends on macchanger if configuring a specific
    mac address

  06 Dec 2004; Roy Marples <uberlord@gentoo.org>:

    macchanger defaults to setting the interface down, and then trying
    with it up - fixes #71929
    macchanger converts mac_${IFACE} to lowercase - fixes #73549
    iproute2 now configures the interface up everytime we add an address
    removed "need interface" from all modules depends as net.lo requires
    interface anyway
    removed hardcoded ath0 in wpa_supplicant

    added rc-script statuses "starting", "stopping" and "inactive"
    dhcpcd, udhcpc and dhclient now support backgrounding - fixes #52975

  05 Dec 2004; Roy Marples <uberlord@gentoo.org>:

    dhclient now kill it's process if it failed to get a lease on startup
    all dhclient responses are now handled correctly

  04 Dec 2004; Roy Marples <uberlord@gentoo.org>:

    fixed dhclient-ifconfig to look for dhclient-udhcpc-wrapper in the correct
    place and changed hardcoded eth1 to ${interface} in udhcpc-ifconfig.
    Fixes #73327 - thanks to Benoit Boissinot

    essidnet gets the essid itself instead of relying on ${ESSID}
    wpa_supplicant module added
    config-system now creates files as .tmp instead of .new and loads
    the wpa_supplicant module if needed
    ifconfig now addes aliases to devices other than eth0
    dhcpcd, dhclient, pump and udhcpc now expose the dhcp_${IFACE} variable
    instead of the old peer_dns_${IFACE}, peer_ntp_${IFACE}, peer_nis_${IFACE}
    ones

    removed modules use dependancy in net.lo and added installed
    - this allows use to provide "virtual" modules which are only "installed"
      when other depended modules are installed
